22-ingress/k8s/example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  labels:
    app: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: case-projects.rz.fh-ingolstadt.de/cnd-sebastian-apel/simple-express:latest
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 1
            failureThreshold: 1
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            # gpu handling?
            #limits: <- weg lassen für HPA-Test, wenn man "speicher füllen" will
            #  memory: "128Mi"
            #  cpu: "100m"
            # port-forwards an Service wählen einen Pod aus und verwenden den dauerhaft
            # -> verwenden Sie NodePort Services
---
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  type: NodePort  # Statt ClusterIP
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: demo-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 3000
